--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "react-spinners": "^0.13.8",
     "sweetalert2": "^11.10.5",
     "yup": "^1.3.3"
   },
